--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -71,7 +71,7 @@
 
           <!-- Submit Button -->
           <div class="form-group">
-            <button type="submit" class="btn-login">Create account</button>
+            <button type="submit" [routerLink]="['/home']" class="btn-login">Create account</button>
           </div>
         </form>
 
