--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -15,7 +15,7 @@
           }
         </mat-nav-list>
       </ng-scrollbar>
-      <div class="p-20">
+      <!-- <div class="p-20">
         <div class="bg-light-primary d-flex align-items-center rounded p-20">
           <div>
             <h5 class="mat-subtitle-1 f-s-16 f-w-600 m-b-8">
@@ -31,7 +31,7 @@
             <img src="./assets/images/backgrounds/rupee.png" alt="image" width="90" />
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </mat-sidenav>
 
