--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -53,7 +53,7 @@
 
         <div class="err_msg mt-3">
           <p class="text-danger">
-            <small id="username-help">Don't have an account ? <a href="#" style="color: red;" class="forgot-password"> Create account </a></small>
+            <small id="username-help">Don't have an account ? <a href="#" [routerLink]="['/signup']" style="color: red;" class="forgot-password"> Create account </a></small>
           </p>
         </div>
         <div class="err_msg mt-3">
