--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -77,7 +77,7 @@
 
         <div class="err_msg mt-3">
           <p class="text-danger">
-            <small id="username-help">Already have account ? <a href="#" style="color: red;" class="forgot-password"> Login </a></small>
+            <small id="username-help">Already have account ? <a href="#" [routerLink]="['/login']" style="color: red;" class="forgot-password"> Login </a></small>
           </p>
         </div>
       </div>
