--- a/src/app/pages/ui-components/tooltips/tooltips.component.html
+++ b/src/app/pages/ui-components/tooltips/tooltips.component.html
@@ -143,8 +143,7 @@
                   color="primary"
                   matTooltip="Info about the action"
                   [matTooltipShowDelay]="showDelay.value"
-                  [matTooltipHideDelay]="hideDelay2.value"
-                >
+                  [matTooltipHideDelay]="hideDelay2.value" >
                   Action
                 </button>
               </div>
@@ -168,8 +167,7 @@
               mat-flat-button
               color="primary"
               [matTooltip]="message.value || ''"
-              aria-label="Button that displays a tooltip with a custom message"
-            >
+              aria-label="Button that displays a tooltip with a custom message">
               Action
             </button>
           </mat-card-content>
