--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
+  <!-- <p-toast /> -->
   <div class="login-container">
     <div class="login-image-section" style="background-image: url('assets/images/logimage.jpg');">
       <!-- Image de fond ou autre contenu -->
@@ -13,6 +14,7 @@
 
     <div class="login-form-section">
       <div class="form-container">
+        <!-- <h3>{{ error }}</h3> -->
         <h2>Create Account</h2>
         <p>Please enter your personnal information to continue</p>
 
