--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,22 +6,25 @@
   <title>Document</title>
 </head>
 <body>
+  <p-toast />
   <div class="login-container">
     <div class="login-image-section" style="background-image: url('assets/images/logimage.jpg');"></div>
 
     <div class="login-form-section">
-      <div style="background-color: rgb(146, 189, 81); color: black; font-weight: bold;" *ngIf="errorMessage" class="error-message">
-        {{ errorMessage }}
-      </div>
       <div class="form-container">
+        <div class="toast" [ngClass]="{ 'show': successMessage }">
+          {{ successMessage }}
+        </div>
+
+
         <h2>Se connecter à votre compte</h2>
         <p>Veuillez entrer votre email et votre mot de passe pour continuer</p>
-
-        <form (ngSubmit)="onSubmit()">
+        <h3 style="color: red; margin-top: 20px;margin-bottom: 20px;">{{ errorMessage }}</h3>
+        <form #fCreate="ngForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
-            <label for="email">Adresse email :</label>
+            <label for="email">Identifiant :</label>
             <div class="input-container">
-              <input type="text" name="login" id="login" [(ngModel)]="login" placeholder="Adresse email" required />
+              <input type="text" name="login" id="login" [(ngModel)]="login" placeholder="identifiant" required />
             </div>
           </div>
 
@@ -33,7 +36,7 @@
           </div>
 
           <div class="form-group">
-            <button type="submit" class="btn-login">Se connecter</button>
+            <button type="submit" [disabled]="!fCreate.valid" class="btn-login">Se connecter</button>
           </div>
         </form>
 
@@ -42,9 +45,13 @@
             <small id="username-help">Pas de compte ? <a href="#" [routerLink]="['/signup']" style="color: red;">Créer un compte</a></small>
           </p>
         </div>
+        <div class="err_msg mt-3">
+          <p class="text-danger">
+            <small id="username-help"> Les accès non autorisés sont strictement interdits.</small>
+          </p>
+      </div>
       </div>
     </div>
   </div>
-
 </body>
 </html>
