--- a/src/app/pages/starter/starter.component.html
+++ b/src/app/pages/starter/starter.component.html
@@ -1,5 +1,6 @@
 <div class="row">
-  <div class="col-lg-8">
+  <h1>Bienvenue dans la page d'acceuil</h1>
+  <!-- <div class="col-lg-8">
     <app-sales-profit></app-sales-profit>
   </div>
   <div class="col-lg-4">
@@ -20,5 +21,5 @@
   </div>
   <div class="col-12">
     <app-blog-card></app-blog-card>
-  </div>
+  </div> -->
 </div>
