--- a/src/app/pages/ui-components/forms/forms.component.html
+++ b/src/app/pages/ui-components/forms/forms.component.html
@@ -1,4 +1,4 @@
-<mat-card class="cardWithShadow theme-card">
+<!-- <mat-card class="cardWithShadow theme-card">
   <mat-card-header>
     <mat-card-title class="m-b-0">Form</mat-card-title>
   </mat-card-header>
@@ -6,7 +6,7 @@
     <form>
       <div class="row">
         <div class="col-lg-6">
-          <!-- input -->
+
           <mat-label class="f-w-600 m-b-8 d-block">Your Name</mat-label>
           <mat-form-field appearance="outline" class="w-100" color="primary">
             <input matInput placeholder="your name " />
@@ -25,7 +25,7 @@
           </mat-form-field>
         </div>
         <div class="col-lg-6">
-          <!-- input -->
+
           <mat-label class="f-w-600 m-b-8 d-block">Email</mat-label>
           <mat-form-field appearance="outline" class="w-100" color="primary">
             <input matInput type="email" placeholder="your email" />
@@ -44,7 +44,7 @@
           </mat-form-field>
         </div>
         <div class="col-lg-6">
-          <!-- input -->
+
           <mat-label class="f-w-600 m-b-8 d-block">Password</mat-label>
           <mat-form-field appearance="outline" class="w-100" color="primary">
             <input matInput type="password" placeholder="your password" />
@@ -70,4 +70,9 @@
       </div>
     </form>
   </mat-card-content>
-</mat-card>
+</mat-card> -->
+<div>
+  <h1>
+    Mes Plats
+  </h1>
+</div>
