--- a/src/app/pages/ui-components/lists/lists.component.html
+++ b/src/app/pages/ui-components/lists/lists.component.html
@@ -1,13 +1,13 @@
-<mat-card class="cardWithShadow theme-card">
+<!-- <mat-card class="cardWithShadow theme-card">
   <mat-card-header>
     <mat-card-title class="m-b-0">Lists</mat-card-title>
   </mat-card-header>
   <mat-card-content class="b-t-1">
     <div class="row">
       <div class="col-lg-6">
-        <!-- --------------------------------------------------- -->
-        <!-- basic -->
-        <!-- --------------------------------------------------- -->
+
+
+
         <mat-card class="b-1 shadow-none">
           <mat-card-header>
             <mat-card-title>Basic</mat-card-title>
@@ -23,9 +23,9 @@
       </div>
 
       <div class="col-lg-6">
-        <!-- --------------------------------------------------- -->
-        <!-- two line -->
-        <!-- --------------------------------------------------- -->
+
+
+
         <mat-card class="b-1 shadow-none">
           <mat-card-header>
             <mat-card-title>Two Line</mat-card-title>
@@ -46,9 +46,9 @@
       </div>
 
       <div class="col-lg-6">
-        <!-- --------------------------------------------------- -->
-        <!-- two line -->
-        <!-- --------------------------------------------------- -->
+
+
+
         <mat-card class="b-1 shadow-none">
           <mat-card-header>
             <mat-card-title>Three Line</mat-card-title>
@@ -73,9 +73,9 @@
       </div>
 
       <div class="col-lg-6">
-        <!-- --------------------------------------------------- -->
-        <!-- two line -->
-        <!-- --------------------------------------------------- -->
+
+
+
         <mat-card class="b-1 shadow-none">
           <mat-card-header>
             <mat-card-title>Three Line with Text wrapping</mat-card-title>
@@ -104,9 +104,9 @@
       </div>
 
       <div class="col-lg-6">
-        <!-- --------------------------------------------------- -->
-        <!-- List with Selection -->
-        <!-- --------------------------------------------------- -->
+
+
+
         <mat-card class="b-1 shadow-none">
           <mat-card-header>
             <mat-card-title>List with Selection</mat-card-title>
@@ -128,9 +128,8 @@
       </div>
 
       <div class="col-lg-6">
-        <!-- --------------------------------------------------- -->
-        <!-- List with single Selection -->
-        <!-- --------------------------------------------------- -->
+
+
         <mat-card class="b-1 shadow-none">
           <mat-card-header>
             <mat-card-title>List with single Selection</mat-card-title>
@@ -157,9 +156,9 @@
       </div>
 
       <div class="col-12">
-        <!-- --------------------------------------------------- -->
-        <!-- List with sections -->
-        <!-- --------------------------------------------------- -->
+
+
+
         <mat-card class="b-1 shadow-none">
           <mat-card-header>
             <mat-card-title>List with sections</mat-card-title>
@@ -198,4 +197,9 @@
       </div>
     </div>
   </mat-card-content>
-</mat-card>
+</mat-card> -->
+<div>
+  <h1>
+    Mes recettes
+  </h1>
+</div>
