--- a/src/app/pages/ui-components/badge/badge.component.html
+++ b/src/app/pages/ui-components/badge/badge.component.html
@@ -1,4 +1,4 @@
-<mat-card class="cardWithShadow theme-card">
+<!-- <mat-card class="cardWithShadow theme-card">
   <mat-card-header>
     <mat-card-title class="m-b-0">Badges</mat-card-title>
   </mat-card-header>
@@ -51,4 +51,7 @@
 
 
   </mat-card-content>
-</mat-card>
+</mat-card> -->
+<div>
+  <h1>Planification de repas </h1>
+</div>
