--- a/src/app/pages/ui-components/chips/chips.component.html
+++ b/src/app/pages/ui-components/chips/chips.component.html
@@ -1,13 +1,12 @@
-<mat-card class="cardWithShadow theme-card">
+<!-- <mat-card class="cardWithShadow theme-card">
   <mat-card-header>
     <mat-card-title class="m-b-0">Chips</mat-card-title>
   </mat-card-header>
   <mat-card-content class="b-t-1">
     <div class="row">
       <div class="col-lg-6">
-        <!-- ------------------------------------------------------------------------- -->
-        <!-- basic -->
-        <!-- ------------------------------------------------------------------------- -->
+
+
 
         <mat-card class="b-1 shadow-none">
           <mat-card-header>
@@ -31,9 +30,8 @@
       </div>
 
       <div class="col-lg-6">
-        <!-- ------------------------------------------------------------------------- -->
-        <!-- avatar -->
-        <!-- ------------------------------------------------------------------------- -->
+
+
 
         <mat-card class="b-1 shadow-none">
           <mat-card-header>
@@ -71,9 +69,8 @@
       </div>
 
       <div class="col-lg-6">
-        <!-- ------------------------------------------------------------------------- -->
-        <!-- Drag n Drop -->
-        <!-- ------------------------------------------------------------------------- -->
+
+
 
         <mat-card class="b-1 shadow-none">
           <mat-card-header>
@@ -97,9 +94,8 @@
       </div>
 
       <div class="col-lg-6">
-        <!-- ------------------------------------------------------------------------- -->
-        <!-- Stacked  -->
-        <!-- ------------------------------------------------------------------------- -->
+
+
         <mat-card class="b-1 shadow-none">
           <mat-card-header>
             <mat-card-title>Stacked </mat-card-title>
@@ -120,9 +116,7 @@
       </div>
 
       <div class="col-12">
-        <!-- ------------------------------------------------------------------------- -->
-        <!-- Input -->
-        <!-- ------------------------------------------------------------------------- -->
+
 
         <mat-card class="b-1 shadow-none">
           <mat-card-header>
@@ -164,9 +158,7 @@
       </div>
 
       <div class="col-12">
-        <!-- ------------------------------------------------------------------------- -->
-        <!-- Form Control -->
-        <!-- ------------------------------------------------------------------------- -->
+
 
         <mat-card class="b-1 shadow-none">
           <mat-card-header>
@@ -221,4 +213,9 @@
       </div>
     </div>
   </mat-card-content>
-</mat-card>
+</mat-card> -->
+<div>
+  <h1>
+    Mes plats
+  </h1>
+</div>
