--- a/src/app/pages/ui-components/tooltips/tooltips.component.html
+++ b/src/app/pages/ui-components/tooltips/tooltips.component.html
@@ -1,4 +1,4 @@
-<mat-card class="cardWithShadow theme-card">
+<!-- <mat-card class="cardWithShadow theme-card">
   <mat-card-header>
     <mat-card-title class="m-b-0">Tooltips</mat-card-title>
   </mat-card-header>
@@ -176,4 +176,9 @@
 
     </div>
   </mat-card-content>
-</mat-card>
+</mat-card> -->
+<div>
+  <h1>
+    Les Fournisseurs
+  </h1>
+</div>
