--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -22,9 +22,9 @@
         <h3 style="color: red; margin-top: 20px;margin-bottom: 20px;">{{ errorMessage }}</h3>
         <form #fCreate="ngForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
-            <label for="email">Identifiant :</label>
+            <label for="email">Email :</label>
             <div class="input-container">
-              <input type="text" name="login" id="login" [(ngModel)]="login" placeholder="identifiant" required />
+              <input type="text" name="login" id="login" [(ngModel)]="login" placeholder="Email" required />
             </div>
           </div>
 
