--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -61,20 +61,20 @@
 
           <!-- Section Email -->
           <div class="form-group">
-            <label for="email">Identifiant:</label>
+            <label for="email">Email:</label>
             <div class="input-container">
               <input
                 type="text"
                 name="login"
                 id="login"
-                placeholder="Identifiant"
+                placeholder="Email"
                 required
                 [(ngModel)]="login"
                 noWhitespace
                 #emailInput="ngModel"
                 [ngClass]="{'ng-invalid': emailInput.invalid && emailInput.touched}" />
               <div *ngIf="emailInput.invalid && emailInput.touched" class="error-message">
-                Un Identifiant valide est requise.
+                Un email valide est requise et ne doit pas contenir d'espaces.
               </div>
             </div>
           </div>
