--- a/src/app/layouts/full/sidebar/nav-item/nav-item.component.html
+++ b/src/app/layouts/full/sidebar/nav-item/nav-item.component.html
@@ -1,26 +1,36 @@
-@if(item.navCap) { @if(item.divider) {
-<span class="sidebar-divider"></span>
-}
-<div mat-subheader class="nav-caption">
-  {{ item.navCap }}
-</div>
-} @else {
-<a
-  mat-list-item
-  (click)="onItemSelected(item)"
-  [ngClass]="{
+<div>
+  <!-- Menu principal -->
+  <a
+    mat-list-item
+    (click)="onItemSelected(item)"
+    [ngClass]="{
       'mat-toolbar mat-primary activeMenu': item.route
         ? router.isActive(item.route, true)
-        : false,
+        : false
     }"
-  class="menu-list-item"
->
-  <span
-    class="iconify routeIcon"
-    matListItemIcon
-    [attr.data-icon]="item.iconName"
-  ></span>
+    class="menu-list-item"
+  >
+    <span
+      class="iconify routeIcon"
+      matListItemIcon
+      [attr.data-icon]="item.iconName"
+    ></span>
+    <span class="hide-menu">{{ item.displayName }}</span>
+    <!-- Flèche pour indiquer un menu déroulant -->
+    <span *ngIf="item.children" class="arrow-icon">
+      <mat-icon>{{ item.expanded ? 'expand_less' : 'expand_more' }}</mat-icon>
+    </span>
+  </a>
 
-  <span class="hide-menu">{{ item.displayName }}</span>
-</a>
-}
+  <!-- Sous-menus -->
+  <div *ngIf="item.children && item.expanded" class="submenu">
+    <a
+      mat-list-item
+      *ngFor="let child of item.children"
+      (click)="onItemSelected(child)"
+      class="menu-list-item"
+    >
+      <span class="hide-menu">{{ child.displayName }}</span>
+    </a>
+  </div>
+</div>
