--- a/src/app/pages/signup/signup.component.scss
+++ b/src/app/pages/signup/signup.component.scss
@@ -18,8 +18,8 @@ body, html {
 
 .error-message {
   color: red; /* Couleur du texte d'erreur */
-  margin-bottom: 15px; /* Espacement en bas du message */
-  font-size: 0.9rem; /* Taille de la police */
+  // margin-bottom: 4px; /* Espacement en bas du message */
+  font-size: 0.6rem; /* Taille de la police */
   text-align: center; /* Centrer le texte */
 }
 
