list call and paginate okay

--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -3,10 +3,10 @@
     <div class="row justify-content-between gap-16">
       <div class="col-lg-4">
         <mat-form-field appearance="outline" class="w-100 hide-hint">
-          <input
+          <input [(ngModel)]="motRecherche"
             matInput
             placeholder="Rechercher un produit"
-            (keyup)="applyFilter($any($event.target).value)"
+            (keyup)="recherche()"
           />
           <mat-icon matSuffix>
             <i-tabler name="search" class="icon-20"></i-tabler>
@@ -15,7 +15,7 @@
       </div>
       <div class="col-lg-4 d-flex align-items-center justify-content-end">
         <button mat-flat-button (click)="openDialog('Add', {})" color="primary">
-          Add Employee
+          Ajouter un Produit
         </button>
       </div>
     </div>
@@ -143,8 +143,8 @@
       <mat-paginator
       [length]="totalRows"
       [pageSize]="rows"
-      [pageSizeOptions]="[5, 10, 20]"
-      showFirstLastButtons
+      [pageSizeOptions]="[10, 20, 30]"
+        showFirstLastButtons
       (page)="onPageChange($event)">
       </mat-paginator>
     </div>
